[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/room/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ChaosObject/Plants/Plants.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/ChaosObject/Trashcan/Trashcan.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ChaosObject/Paperwork/Paperwork.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ChaosObject/Dishes/Dishes.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ChaosObject/Books_in_Shelve/Books.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Clock/Clock.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/main/kuddelmuddel.ogg" type="AudioStream" id=9]
[ext_resource path="res://fonts/Archivo_Black/ArchivoBlack_Huge.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/main/ViewportContainer.gd" type="Script" id=11]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.678431, 0.960784, 1, 1 )
fog_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 5.0
fog_depth_end = 30.0
glow_enabled = true
glow_intensity = 0.5
glow_strength = 1.1
glow_bloom = 0.5
glow_hdr_threshold = 1.5

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../MinigameOverlay:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_day"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0649414, 0.416861, 0.0649414 )
script = ExtResource( 3 )

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.685921, -0.324014, 0.651558, 0, 0.895396, 0.445272, -0.727676, -0.305421, 0.614171, 7.35889, 4.76353, 7.02919 )
environment = SubResource( 1 )
fov = 20.3828
near = 0.1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Room" parent="." instance=ExtResource( 1 )]

[node name="ClothPiles" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position3D" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.36222, -0.708283, 1.09449 )

[node name="Position3D2" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.314108, -1.01623, 1.10862 )

[node name="Position3D3" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.677489, -1.01623, 1.10862 )

[node name="Position3D4" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.702124, -1.01623, 0.190928 )

[node name="Position3D5" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.234041, -1.01623, 0.190928 )

[node name="Position3D6" type="Position3D" parent="ClothPiles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.419717, -1.01623, -1.22091 )

[node name="Clock" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.96829, 0.0363536, 0.238895 )

[node name="Plants" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2032, -0.47379, 0.245138 )

[node name="Books" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9398, -0.0997759, -0.956816 )

[node name="Trashcan" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.70177, -1.02191, 0.185243 )
chaos_level = 4

[node name="Paperwork" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.69967, -0.578373, -0.375962 )

[node name="Dishes" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.72697, -0.555544, -1.41877 )

[node name="MinigameOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ViewportContainer" type="ViewportContainer" parent="MinigameOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 11 )

[node name="Viewport" type="Viewport" parent="MinigameOverlay/ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0
physics_object_picking = true

[node name="Transition" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Transition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Transition"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Transition/VBoxContainer"]
margin_top = 207.0
margin_right = 1024.0
margin_bottom = 243.0
text = "Dawn of"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Transition/VBoxContainer"]
margin_top = 247.0
margin_right = 1024.0
margin_bottom = 353.0
alignment = 1

[node name="Label3" type="Label" parent="Transition/VBoxContainer/HBoxContainer"]
margin_left = 363.0
margin_right = 593.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 10 )
text = "Day "

[node name="DayLabel" type="Label" parent="Transition/VBoxContainer/HBoxContainer"]
margin_left = 597.0
margin_right = 661.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="Label2" type="Label" parent="Transition/VBoxContainer"]
margin_top = 357.0
margin_right = 1024.0
margin_bottom = 393.0
text = "- 10 Hours Remain -"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Transition")
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/show_day = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.0
autoplay = true

[connection signal="end_of_day" from="Clock" to="." method="_on_Clock_end_of_day"]
[connection signal="clicked" from="Plants" to="." method="_on_Plants_clicked"]
[connection signal="clicked" from="Books" to="." method="_on_Books_clicked"]
[connection signal="clicked" from="Trashcan" to="." method="_on_Trashcan_clicked"]
[connection signal="clicked" from="Paperwork" to="." method="_on_Paperwork_clicked"]
[connection signal="clicked" from="Dishes" to="." method="_on_Dishes_clicked"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
